Fixed github action and improved base url for github pages

--- a/TP2/package.json
+++ b/TP2/package.json
@@ -6,7 +6,7 @@
 		"start": "ng serve",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
-		"deploy": "ng build --base-href=https://dmfernandez96.github.io/unicen-visualizacion/TP2/EntregaFinal/",
+		"deploy": "ng build --base-href=/unicen-visualizacion/TP2/EntregaFinal/",
 		"test": "ng test"
 	},
 	"private": true,
